--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv_codegen = "0.15.0"
 http-bytes = "0.1.0"
 mime = "0.3.17"
 minijinja = { version = "0.31.0", features = ["source"] }
