--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ RELEASE_PROTOCOL=https
 
 PRIVATE_KEY_FILE="/etc/letsencrypt/live/mndco11age.xyz/privkey.pem"
 CERT_CHAIN_FILE="/etc/letsencrypt/live/mndco11age.xyz/fullchain.pem"
+
+STATIC_HOST="localhost:6767"
