Revamped design, tabs, etc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
 dotenv_codegen = "0.15.0"
 http-bytes = "0.1.0"
 include_dir = "0.7.3"
@@ -13,5 +14,7 @@ mime = "0.3.17"
 minijinja = { version = "0.31.0", features = ["source"] }
 new_mime_guess = "4.0.1"
 openssl = "0.10.50"
+rusqlite = "0.30.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-xml-rs = "0.6.0"
+url = "2.5.0"
