--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ mime = "0.3.17"
 minijinja = { version = "0.31.0", features = ["source"] }
 new_mime_guess = "4.0.1"
 openssl = "0.10.50"
+percent-encoding = "2.3.1"
+pulldown-cmark = "0.9.3"
 rusqlite = "0.30.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-xml-rs = "0.6.0"
